--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,5 +1,6 @@
 <h2>Schedule</h2>
 <ng-container *ngIf="(now$ | async) as now">
+
   <ng-container *ngIf="scheduleConfig && adding">
     <input type="button" value="cancel" (click)="setAdding(false)">
     <input type="button" value="save" (click)="saveNewScheduleItem()" [disabled]="!addScheduleItem.valid">
@@ -57,7 +58,7 @@
   <input type="button" value="add" (click)="setAdding(true)">
 </ng-container>
 
-<div>Showing {{schedule.returned}} of {{schedule.total}}.</div>
+<div class="showing">Showing {{schedule.returned}} of {{schedule.total}}.</div>
 <ng-container *ngIf="schedule.total>schedule.returned">
   <div>
     <input type="button" value="&laquo;" (click)="previousPage()" [disabled]="1>schedule.query.offset">
@@ -68,19 +69,23 @@
 </ng-container>
 
 <div *ngIf="(now$ | async) as now">
-  <div *ngIf="(items$|async) as items">
-    <ol [start]="schedule.query.offset+1">
+  <div *ngIf="(items$|async) as items, let i=index;">
+    <ul>
       <ng-container *ngFor="let item of items; let i=index">
         <ng-container *ngIf="!formGroups[item.id]">
+
           <li class="displaying"
             [ngClass]="{'future' : 0>timeFlags[item.id], 'current':0===timeFlags[item.id],  'completed':timeFlags[item.id]>0  }">
 
-
+            <div class="index">
+              <span>{{schedule.query.offset+1+i}}</span>
+            </div>
             <ng-container *ngFor="let selector of scheduleConfig.selectors">
 
               <ng-container *ngIf="selector.type==='foreignKey'">
                 <ng-container *ngIf="foreignKeyEntitiesIdMap[selector.entity]">
-                  <div [ngClass]="selectorentity">
+
+                  <div class="foreignKey" [ngClass]="selector.entity">
                     <ng-container *ngIf="item[selector.name] as id">
                       {{foreignKeyEntitiesIdMap[selector.entity][id][selector.label]}}
                     </ng-container>
@@ -88,59 +93,69 @@
                       any
                     </ng-container>
                   </div>
+
                 </ng-container>
               </ng-container>
 
               <ng-container *ngIf="selector.type==='quantity'">
-                <div>{{item[selector.name]}}</div>
+
+                <div class="quantity" [ngClass]="selector.name">
+                  <span>
+                    {{item[selector.name]}}
+                  </span>
+                </div>
 
               </ng-container>
-
-
-
 
               <ng-container *ngIf="selector.type==='date'">
-                {{item.start.format('M/DD/YYYY HH:mm')}}
+
+                <div class="date">{{item.start.format('M/DD/YYYY HH:mm')}}</div>
+
               </ng-container>
 
 
             </ng-container>
+
             <ng-container *ngIf="0>now.diff(item.start)">
 
-              <span class="edit">
+              <div class="edit">
                 <a (click)="edit(item)">edit</a>
-              </span>
+              </div>
 
-              <span class="edit delete">
+              <div class="edit delete">
                 <a (click)="delete(item)">delete</a>
-              </span>
+              </div>
             </ng-container>
-            <span>
-              {{now.diff(item.start)}}:: {{timeFlags[item.id]}}
-            </span>
-
           </li>
+
         </ng-container>
         <ng-container *ngIf="formGroups[item.id]">
+
           <li class="editing">
+
             <form [formGroup]="formGroups[item.id]">
 
               <ng-container *ngFor="let selector of scheduleConfig.selectors">
 
                 <ng-container *ngIf="selector.type==='foreignKey'">
-                  <select [formControlName]="selector.name"
-                    (change)="setLatestForeignKeyValueForAdd(formGroups[item.id],selector)">
-                    <ng-container *ngIf="selector.nullValue">
-                      <option [value]="selector.default">{{selector.nullValue}}</option>
-                    </ng-container>
-                    <option *ngFor="let entity of foreignKeyEntities[selector.entity]" [value]="entity.id">
-                      {{entity[selector.label]}}
-                    </option>
-                  </select>
+                  <div class="foreignKey" [ngClass]="selector.entity">
+                    <select [formControlName]="selector.name"
+                      (change)="setLatestForeignKeyValueForAdd(formGroups[item.id],selector)">
+                      <ng-container *ngIf="selector.nullValue">
+                        <option [value]="selector.default">{{selector.nullValue}}</option>
+                      </ng-container>
+                      <option *ngFor="let entity of foreignKeyEntities[selector.entity]" [value]="entity.id">
+                        {{entity[selector.label]}}
+                      </option>
+                    </select>
+                  </div>
                 </ng-container>
 
                 <ng-container *ngIf="selector.type==='quantity'">
-                  <input [formControlName]="selector.name" type="number" size="5" [placeholder]="selector.name">
+                  <div class="quantity" [ngClass]="selector.name">
+                    <input [formControlName]="selector.name" type="number" [placeholder]="selector.name">
+                  </div>
+
                 </ng-container>
 
 
@@ -169,34 +184,21 @@
                     </option>
                   </select>
                 </ng-container>
-                <!--
 
-              <ng-container *ngIf="select.foreignKey">
-                <select [formControlName]="field.name">
-                  <option *ngFor="let entity of foreignKeyEntities[field.foreignKey]" [value]="entity.id">
-                    {{entity[field.label]}}
-                  </option>
-                </select>
               </ng-container>
 
-              <ng-container *ngIf="!field.foreignKey">
-                <input type="text" [formControlName]="field.name">
-              </ng-container>
-              -->
-              </ng-container>
-
-              <span class="edit">
+              <div class="edit">
                 <input type="button" (click)="save(item,i)" value="save"
                   [disabled]="formGroups[item.id].pristine || loading[item.id]">
-              </span>
-              <span class="edit">
+              </div>
+              <div class="edit">
                 <input type="button" (click)="cancel(item)" value="cancel" [disabled]="loading[item.id]">
-              </span>
+              </div>
 
             </form>
           </li>
         </ng-container>
       </ng-container>
-    </ol>
+    </ul>
   </div>
 </div>
