--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,47 +1,47 @@
 <h2>Schedule</h2>
 <ng-container *ngIf="(now$ | async) as now">
 
-  <ng-container *ngIf="scheduleConfig && adding">
+  <ng-container *ngIf="config && adding">
     <input type="button" value="cancel" (click)="setAdding(false)">
     <input type="button" value="save" (click)="saveNewScheduleItem()" [disabled]="!addScheduleItem.valid">
     <form [formGroup]="addScheduleItem">
 
-      <ng-container *ngFor="let selector of scheduleConfig.selectors">
+      <ng-container *ngFor="let field of config.fields">
 
-        <ng-container *ngIf="selector.type==='foreignKey'">
-          <select [formControlName]="selector.name" (change)="setLatestForeignKeyValueForAdd(addScheduleItem,selector)">
-            <ng-container *ngIf="selector.nullValue">
-              <option [value]="selector.default">{{selector.nullValue}}</option>
+        <ng-container *ngIf="field.foreignKey">
+          <select [formControlName]="field.name" (change)="setLatestForeignKeyValueForAdd(addScheduleItem,field)">
+            <ng-container *ngIf="field.nullValue">
+              <option [value]="field.default">{{field.nullValue}}</option>
             </ng-container>
-            <option *ngFor="let entity of foreignKeyEntities[selector.entity]" [value]="entity.id">
-              {{entity[selector.label]}}
+            <option *ngFor="let entity of foreignKeyEntities[field.foreignKey]" [value]="entity.id">
+              {{entity[field.label]}}
             </option>
           </select>
         </ng-container>
 
-        <ng-container *ngIf="selector.type==='quantity'">
-          <input [formControlName]="selector.name" type="number" size="5" [placeholder]="selector.name">
+        <ng-container *ngIf="field.type==='quantity'">
+          <input [formControlName]="field.name" type="number" size="5" [placeholder]="field.name">
         </ng-container>
 
-        <ng-container *ngIf="selector.type==='date'">
+        <ng-container *ngIf="field.type==='date'">
           <mat-form-field>
-            <input matInput [min]="now" [formControlName]="selector.name" [matDatepicker]="picker"
-              [placeholder]="selector.placeholder">
+            <input matInput [min]="now" [formControlName]="field.name" [matDatepicker]="picker"
+              [placeholder]="field.placeholder">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
         </ng-container>
 
-        <ng-container *ngIf="selector.type==='hour'">
-          <select [formControlName]="selector.name">
+        <ng-container *ngIf="field.type==='hour'">
+          <select [formControlName]="field.name">
             <option *ngFor="let h of hours" [value]="h">
               {{h | number : '2.0-0'}}
             </option>
           </select>
         </ng-container>
 
-        <ng-container *ngIf="selector.type==='minute'">
-          <select [formControlName]="selector.name">
+        <ng-container *ngIf="field.type==='minute'">
+          <select [formControlName]="field.name">
             <option *ngFor="let m of minutes" [value]="m">
               :{{m | number : '2.0-0'}}
             </option>
@@ -80,16 +80,16 @@
             <div class="index">
               <span>{{schedule.query.offset+1+i}}</span>
             </div>
-            <ng-container *ngFor="let selector of scheduleConfig.selectors">
+            <ng-container *ngFor="let field of config.fields">
 
-              <ng-container *ngIf="selector.type==='foreignKey'">
-                <ng-container *ngIf="foreignKeyEntitiesIdMap[selector.entity]">
+              <ng-container *ngIf="field.foreignKey">
+                <ng-container *ngIf="foreignKeyEntitiesIdMap[field.foreignKey]">
 
-                  <div class="foreignKey" [ngClass]="selector.entity">
-                    <ng-container *ngIf="item[selector.name] as id">
-                      {{foreignKeyEntitiesIdMap[selector.entity][id][selector.label]}}
+                  <div class="foreignKey" [ngClass]="field.foreignKey">
+                    <ng-container *ngIf="item[field.name] as id">
+                      {{foreignKeyEntitiesIdMap[field.foreignKey][id][field.label]}}
                     </ng-container>
-                    <ng-container *ngIf="!item[selector.name]">
+                    <ng-container *ngIf="!item[field.name]">
                       any
                     </ng-container>
                   </div>
@@ -97,17 +97,17 @@
                 </ng-container>
               </ng-container>
 
-              <ng-container *ngIf="selector.type==='quantity'">
+              <ng-container *ngIf="field.type==='quantity'">
 
-                <div class="quantity" [ngClass]="selector.name">
+                <div class="quantity" [ngClass]="field.name">
                   <span>
-                    {{item[selector.name]}}
+                    {{item[field.name]}}
                   </span>
                 </div>
 
               </ng-container>
 
-              <ng-container *ngIf="selector.type==='date'">
+              <ng-container *ngIf="field.type==='date'">
 
                 <div class="date">{{item.start.format('M/DD/YYYY HH:mm')}}</div>
 
@@ -135,50 +135,48 @@
 
             <form [formGroup]="formGroups[item.id]">
 
-              <ng-container *ngFor="let selector of scheduleConfig.selectors">
+              <ng-container *ngFor="let field of config.fields">
 
-                <ng-container *ngIf="selector.type==='foreignKey'">
-                  <div class="foreignKey" [ngClass]="selector.entity">
-                    <select [formControlName]="selector.name"
-                      (change)="setLatestForeignKeyValueForAdd(formGroups[item.id],selector)">
-                      <ng-container *ngIf="selector.nullValue">
-                        <option [value]="selector.default">{{selector.nullValue}}</option>
+                <ng-container *ngIf="field.foreignKey">
+                  <div class="foreignKey" [ngClass]="field.foreignKey">
+                    <select [formControlName]="field.name"
+                      (change)="setLatestForeignKeyValueForAdd(formGroups[item.id],field)">
+                      <ng-container *ngIf="field.nullValue">
+                        <option [value]="field.default">{{field.nullValue}}</option>
                       </ng-container>
-                      <option *ngFor="let entity of foreignKeyEntities[selector.entity]" [value]="entity.id">
-                        {{entity[selector.label]}}
+                      <option *ngFor="let entity of foreignKeyEntities[field.foreignKey]" [value]="entity.id">
+                        {{entity[field.label]}}
                       </option>
                     </select>
                   </div>
                 </ng-container>
 
-                <ng-container *ngIf="selector.type==='quantity'">
-                  <div class="quantity" [ngClass]="selector.name">
-                    <input [formControlName]="selector.name" type="number" [placeholder]="selector.name">
+                <ng-container *ngIf="field.type==='quantity'">
+                  <div class="quantity" [ngClass]="field.name">
+                    <input [formControlName]="field.name" type="number" [placeholder]="field.name">
                   </div>
 
                 </ng-container>
 
-
-
-                <ng-container *ngIf="selector.type==='date'">
+                <ng-container *ngIf="field.type==='date'">
                   <mat-form-field>
-                    <input matInput [min]="now" [formControlName]="selector.name" [matDatepicker]="picker"
-                      [placeholder]="selector.placeholder">
+                    <input matInput [min]="now" [formControlName]="field.name" [matDatepicker]="picker"
+                      [placeholder]="field.placeholder">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
                   </mat-form-field>
                 </ng-container>
 
-                <ng-container *ngIf="selector.type==='hour'">
-                  <select [formControlName]="selector.name">
+                <ng-container *ngIf="field.type==='hour'">
+                  <select [formControlName]="field.name">
                     <option *ngFor="let h of hours" [value]="h">
                       {{h | number : '2.0-0'}}
                     </option>
                   </select>
                 </ng-container>
 
-                <ng-container *ngIf="selector.type==='minute'">
-                  <select [formControlName]="selector.name">
+                <ng-container *ngIf="field.type==='minute'">
+                  <select [formControlName]="field.name">
                     <option *ngFor="let m of minutes" [value]="m">
                       :{{m | number : '2.0-0'}}
                     </option>
